--- a/fashion.css
+++ b/fashion.css
@@ -1,6 +1,6 @@
 body{
     background-color:black;
-    
+    widht: fit-content;
 }
 .form{
     font-family:Georgia, 'Times New Roman', Times, serif;
